# gstdeepstream

buffer_manager/: a.out  build.sh  testimage.ppm
buffer_manager/include/: buffer_manager.h
buffer_manager/src/: buffer_manager.cu
gst-plugins/: meson.build
gst-plugins/gst-sender/: meson.build
gst-plugins/gst-sender/src/: gstsender.c  gstsender.cu  gstsender.h
